# nyc-airbnb-analysis

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
data/: AB_NYC_2019.parquet  nyc_airbnb_cleaned.parquet
notebooks/: NYC_Airbnb_EDA.ipynb
scripts/: download_data.py
