[project]
name = "nyc-airbnb-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.1",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]
